--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body {
     background-color: #f5f5f5;
 }
 
+.headerWrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .topHeader {
     background-color: #F96302;   
     text-align: center;
@@ -13,7 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
+    width: 100%;
 }
 
 .topHeaderText {
@@ -26,6 +34,7 @@ body {
     box-shadow: 0 6px 6px -4px lightgray;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .centerMainHeaderWrapper {
@@ -127,12 +136,20 @@ body {
 
 .searchbarWrapper {
     display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.searchbar {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .input {
-    width: 625px;
+    width: 100%;
     height: 34px;
-    border: 1px solid black;
 }
 
 .searchIcon {
@@ -142,6 +159,8 @@ body {
     border-top: 1px solid black;
     border-right: 1px solid black;
     border-bottom: 1px solid black;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 .searchIconImg {
@@ -151,7 +170,7 @@ body {
 
 
 .headerRight {
-    width: 35%;
+    width: 30%;
     display: flex;
     justify-content: right;
 }
